--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             </div>
 
             <div class="nav-sign border"> 
-                <a href="/Shivam-6383.github.io/sign_in.html" target="_self" class="s1"> Hello, Sign in</a>
-                <a href="/Shivam-6383.github.io/sign_in.html" class="s2">Account & List</a>
+                <a href="./sign_in.html" target="_self" class="s1"> Hello, Sign in</a>
+                <a href="./sign_in.html" class="s2">Account & List</a>
             </div>
 
             <div class="nav-return border">
