--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 </head>
 
 
-<!--
- can expand it using each link and nav panel
- animation if possible anywhere -->
+<!-- units are already in relative. just make some images into vw and vh with flex wrap property to make it mobile view-->
+
 <body>
     <header>
         <div class="nav-bar" id="top">
             <div class="nav-logo border">
-                <div class="logo"></div>  
+                <div class="logo"></div>
             </div>
 
             <div class="nav-add border">
@@ -58,7 +57,7 @@
                 </div>
             </div>
 
-            <div class="nav-sign border"> 
+            <div class="nav-sign border">
                 <a href="./sign_in.html" target="_self" class="s1"> Hello, Sign in</a>
                 <a href="./sign_in.html" class="s2">Account & List</a>
             </div>
@@ -68,7 +67,7 @@
                 <a href="" class="s2">& Orders</a>
             </div>
             <div class="nav-cart border">
-                <i class="fa-solid fa-cart-shopping"></i>  
+                <i class="fa-solid fa-cart-shopping"></i>
                 Cart
             </div>
         </div>
@@ -93,7 +92,8 @@
     <main>
         <div class="hero-sec">
             <div class="hero-msg">
-                <p>you are on amazon.com . you can also shop on amazon india fir millions of product with faster local
+                <p>you are on amazon.com . you can also shop on amazon india fir millions of product with faster
+                    local
                     delivery.
                     <a href="https://amazon.in" target="_main">click here to go to amazon.in</a>
                 </p>
@@ -103,7 +103,7 @@
                 <!-- create on fore ground -->
 
             </div>
-        </div> 
+        </div>
 
         <div class="shop-sec1">
             <div class="box">
@@ -215,6 +215,7 @@
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
