--- a/sign_in.html
+++ b/sign_in.html
@@ -19,16 +19,20 @@
         </form>
 
         <!-- below links are direct link from the official amazon website.. -->
-        <p class="p2">by continuing, you agree to Amazon's <a
-                href="https://www.amazon.com/gp/help/customer/display.html/ref=ap_signin_notification_condition_of_use?ie=UTF8&nodeId=508088"
+        <p class="p2">by continuing, you agree to Amazon's
+            <a href="https://www.amazon.com/gp/help/customer/display.html/ref=ap_signin_notification_condition_of_use?ie=UTF8&nodeId=508088"
                 target="_main">Condition
                 of use</a> and <a
                 href="https://www.amazon.com/gp/help/customer/display.html/ref=ap_signin_notification_privacy_notice?ie=UTF8&nodeId=468496"
                 target="_main">Privacy
-                Notice.</a></p>
-        <p class="p3"><a
-                href="https://www.amazon.com/gp/help/customer/account-issues/ref=unified_claim_collection?ie=UTF8"
-                target="_main">Need help?</a></p>
+                Notice.
+            </a>
+        </p>
+        <p class="p3">
+            <a href="https://www.amazon.com/gp/help/customer/account-issues/ref=unified_claim_collection?ie=UTF8"
+                target="_main">Need help?
+            </a>
+        </p>
         <div class="buss">
             <hr>
             <h4>buying for work?</h4>
